changed deprecated URL constructor with URI constructor